--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-fastapi==0.115.5
-uvicorn==0.30.1
-pydantic==2.10.6
-numpy==1.26.4
-pandas==2.2.0
-scipy==1.11.4
-scikit-learn==1.4.2
-nltk==3.9.1
+fastapi
+uvicorn
+pydantic
+python-multipart
+numpy
+pandas
+scikit-learn
+matplotlib
+seaborn
+gunicorn
+nltk
